<resources>
    <string name="app_name">Gifts store</string>
    <string name="logo">Logo</string>

    <string name="welcome_message">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastname1">Last name 1</string>
    <string name="hint_lastname2">Last name 2</string>
    <string name="btn_register_new">Sign up</string>
    <string name="btn_back_login">I\'m registered</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">No account? Sign up!</string>
    <string name="btn_forgot_password">I forgot my password.</string>
    <string name="btn_no_account">Don\'t have an account?</string>
    <string name="register_a_new_user">Register a new user</string>
    <string name="logo_descrip">Logo</string>
    <string name="login_google_text">Iniciar con Google</string>
    <string name="web_client_id">545057855988-enud8gsgvnhe0o5dnrnc95iojurf9rom.apps.googleusercontent.com</string>
    <string name="recover_password_text">Recover password</string>
    <string name="btn_send_email">Send email</string>
    <string name="back_to_login_recover">Back to login</string>
    <string name="btn_sign_out_text">Sign-out</string>
    <string name="product_img_description">Product</string>

    <string name="name_product"/>
    <string name="price_product">Precio: $%s</string>
    <string name="description_product"/>
    <string name="btn_add_to_cart">Agregar al carrito</string>

    <string name="title_category1">Handicrafts</string>
    <string name="title_category2">Bags</string>
    <string name="title_category3">Fragrances</string>
    <string name="title_category4">Wristbands</string>
    <string name="title_category5">More products</string>

    <string name="cart_total"/>
    <string name="cart_purchase">Purchase</string>
</resources>