<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".RecoverPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_giftstore"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:contentDescription="@string/logo"
            android:layout_marginTop="-250dp"
            android:layout_marginBottom="-300dp"
            android:transitionName="logo_animation"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/recover_password_text"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_email"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/btn_send_email"
            android:backgroundTint="@color/red" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login_recover"
            android:backgroundTint="@color/cardview_dark_background" />
    </LinearLayout>

</ScrollView>