<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_giftstore"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:layout_marginTop="-330dp"
            android:layout_marginBottom="-330dp"
            android:contentDescription="@string/logo_descrip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_a_new_user"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_name"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lastname1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_lastname1"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lastname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_lastname2"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_email"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint_password"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_new"
            android:layout_marginTop="40dp"
            android:textAllCaps="true"
            android:backgroundTint="@color/red"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_back_login"
            android:textStyle="bold"
            android:textColor="@color/gray"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_gravity="end"/>

    </LinearLayout>

</ScrollView>