<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".ActivityProductDetails">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:stretchColumns="1">
            <TableRow>
                <ImageButton
                        android:id="@+id/btn_back_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:contentDescription="TODO"
                        android:src="@drawable/img_back"
                        android:layout_gravity="start"
                        tools:ignore="TouchTargetSizeCheck" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    >
                    <ImageButton
                        android:id="@+id/btn_cart_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:contentDescription="TODO"
                        android:src="@drawable/cart"
                        android:layout_gravity="end"
                        tools:ignore="TouchTargetSizeCheck" />
                    <TextView
                        android:id="@+id/cart_count_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_marginStart="-15dp"
                        android:text="0" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <ImageView
                android:id="@+id/product_image_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/default_product"
                android:layout_gravity="center"

                android:contentDescription="TODO"/>
        <TextView
                android:id="@+id/product_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/name_product"
                android:textStyle="bold"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/product_price_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/price_product"
                android:textAlignment="textStart"/>

        <TextView
                android:id="@+id/product_description_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_product"
                android:textAlignment="textStart"/>

        <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/btn_add_to_cart"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"/>


    </LinearLayout>

</ScrollView>